# DataBase

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: Column.h  Element.h  MyBDException.h  MyCoolDB.h  RequestParser.h  Result.h  Table.h
lib/src/: Column.cpp  Element.cpp  MyCoolDB.cpp  RequestParser.cpp  Result.cpp  Table.cpp
tests/: CMakeLists.txt  DataBase_tests.cpp
